--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="node_modules/mint-ui/lib/style.css">
+    <link rel="stylesheet" href="node_modules/animate.css/animate.css">
     <title>a-vue-app-template</title>
     <style>
       body {
