--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">-->
+    <!--<meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">-->
     <link rel="stylesheet" href="node_modules/mint-ui/lib/style.css">
     <link rel="stylesheet" href="node_modules/animate.css/animate.css">
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <!--<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">-->
     <title>a-vue-app-template</title>
     <style>
       body {
@@ -17,6 +21,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <!--<script type="text/javascript" src="cordova.js"></script>-->
     <!-- built files will be auto injected -->
   </body>
 </html>
