1.solve the fontawesome.css failed problem after building, 2.fix the issue of footerbar icons, 3.add favicon in the project

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">-->
     
     <!--<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">-->
+    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
     <title>a-vue-app-template</title>
     <style>
       body {
